<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/id1"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/id2"
        android:icon="@drawable/authentication"
        android:title="@string/loans" />

  <!--  <item
        android:id="@+id/id5"
        android:icon="@drawable/authentication"
        android:title="@string/myloans" />-->

    <item
        android:id="@+id/id3"
        android:icon="@drawable/discover"
        android:title="@string/payment"/>

    <item
        android:id="@+id/id4"
        android:icon="@drawable/me"
        android:title="@string/profile" />


</menu>
