<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PhoneNumberEnterFragment"
    android:background="@drawable/backgroundstyle">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="?android:textAppearanceMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:padding="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/enter_phone_and_email"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/we_will_use_mobile_email"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="15dp"
                android:id="@+id/phone_input_layout"
                android:foregroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:hint="@string/phone_number"
                android:focusable="true">

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="12dp"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="number|phone"
                    android:textSize="20sp"
                    android:focusableInTouchMode="true"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:id="@+id/email_input_layout"
                android:foregroundTint="@color/black"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:hint="@string/email_address">

                <EditText
                    android:textSize="14dp"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="15dp"
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/termsAndConditionCheckbox"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/blueThemeBg"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/blueThemeBg"
                    android:backgroundTint="@color/blueThemeBg"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_accept"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/termsAndConditionTextView"
                    android:textColorLink="@color/blueThemeBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/blueThemeBg"
                    />


            </LinearLayout>

            <Button
                android:id="@+id/nextButton"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_orange_custom"
                android:textColor="@color/white"
                android:text="@string/next"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:drawableEnd="@drawable/next"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</FrameLayout>